[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdnperf"
version = "0.1.0"
description = "CDN PoP latency measurement tool with per-phase timing and network path tracing"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27",
    "dnspython>=2.6",
    "rich>=13.0",
    "click>=8.1",
    "icmplib>=3.0",
]

[project.scripts]
cdnperf = "cdnperf.cli:main"

[tool.setuptools.packages.find]
include = ["cdnperf*"]

[tool.setuptools.package-data]
cdnperf = ["data/*.json"]
